added feature category to api
