# OpenApiDoc/swagger.yaml
@@ -10,28 +10,28 @@ info:
     url: "http://www.apache.org/licenses/LICENSE-2.0.html"
 host: "localhost:8080"
 tags:
-- name: "User"
-  description: "Actions on the Userbase"
-- name: "Provider"
-  description: "Actions on the Provider table"
+  - name: "User"
+    description: "Actions on the Userbase"
+  - name: "Provider"
+    description: "Actions on the Provider table"
 schemes:
-- "http"
+  - "http"
 paths:
   /user:
     post:
       tags:
-      - "User"
+        - "User"
       summary: "Create a new UserAccount"
       operationId: "signUp"
       consumes:
-      - "application/json"
+        - "application/json"
       parameters:
-      - in: "body"
-        name: "body"
-        description: "User object that needs to be added to the Database"
-        required: true
-        schema:
-          $ref: "#/definitions/User"
+        - in: "body"
+          name: "body"
+          description: "User object that needs to be added to the Database"
+          required: true
+          schema:
+            $ref: "#/definitions/User"
       responses:
         "201":
           description: "User has been created"
@@ -40,18 +40,18 @@ paths:
   /provider:
     post:
       tags:
-      - "Provider"
+        - "Provider"
       summary: "Create new Account for provider"
       operationId: "signUpProvider"
       consumes:
-      - "application/json"
+        - "application/json"
       parameters:
-      - in: "body"
-        name: "body"
-        description: "Provider Object to be persisted in Database"
-        required: true
-        schema: 
-          $ref: "#/definitions/Provider"
+        - in: "body"
+          name: "body"
+          description: "Provider Object to be persisted in Database"
+          required: true
+          schema:
+            $ref: "#/definitions/Provider"
       responses:
         "201":
           description: "Provider Account has been created"
@@ -59,7 +59,7 @@ paths:
           description: "Data violating requirements"
     get:
       tags:
-      - "Provider"
+        - "Provider"
       summary: "Get all Providers in DB"
       operationId: "getAllProviders"
       responses:
@@ -71,6 +71,20 @@ paths:
               $ref: '#/definitions/Provider'
         "404":
           description: "Successfull request, no providers found"
+  /provider/category:
+    get:
+      tags:
+        - "Provider"
+      summary: "Get all Providers that match the category"
+      responses:
+        200:
+          description: "Successfull request, category found"
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Provider'
+        404:
+          description: "Successfull request, no category found"
 
 definitions:
   User:
@@ -88,10 +102,10 @@ definitions:
         type: string
       password:
         type: string
-    required: 
-    - username
-    - email
-    - password
+    required:
+      - username
+      - email
+      - password
   Provider:
     type: object
     properties:
@@ -109,13 +123,15 @@ definitions:
         type: string
       homepageUrl:
         type: string
+      category:
+        type: string
       photos:
         type: array
         items:
           type: string
-    required: 
-    - name
-    - address
-    - phoneNumber
-    - email
-    - password
+    required:
+      - name
+      - address
+      - phoneNumber
+      - email
+      - password
